syntax = "proto2";

package binary.wz.im.common.proto;
option java_outer_classname = "Internal";

message InternalMsg {
    required int32 version = 1;
    //协议版本号

    required string id = 2;
    //消息标识

    optional int64 seq = 3;
    //消息序号

    optional string fromId = 4;
    //发送者userId

    optional string destId = 5;
    //接收者userId

    required int64 createTime = 6;
    //发送时间

    required MsgType msgType = 7;
    //消息类型

    optional string msgBody = 8;
    //消息体

    enum MsgType {
        GREET = 0;
        ACK = 1;
        ERROR = 2;
    }
}
